--- a/google_Homepage/landing_page.html
+++ b/google_Homepage/landing_page.html
@@ -3,11 +3,195 @@
 
 <head>
     <title>Google Clone</title>
+    <link rel="stylesheet" href="style.css">
+    <script type="text/javascript" src="js/functions.js"></script>
 </head>
+
+<header>
+        <div class="left">
+            <img src="" />
+        </div>
+        <div class="wrap">
+            <div class="search bar">
+                <p>build this web page</p>
+                <div class="cancel_btn">
+                    X
+                </div>
+                <div class="search_btn">
+                    X
+                </div>
+            </div>
+            <div class="right">
+                <img src="">
+                <img src="">
+            </div>
+            <ul class="left">
+                <li>
+                    <a href=""><img src="">All</a>
+                </li>
+                <li>
+                    <a href=""><img src="">News</a>
+                </li>
+                <li>
+                    <a href=""><img src="">Videos</a>
+                </li>
+                <li>
+                    <a href=""><img src="">Maps</a>
+                </li>
+                <li>
+                    <a href=""><img src="">Shopping</a>
+                </li>
+                <li>
+                    <a href=""><img src="">More</a>
+                </li>
+            </ul>
+            <ul class="right">
+                <li>
+                    <a href="">Settings</a>
+                </li>
+                <li>
+                    <a href="">Tools</a>
+                </li>
+            </ul>
+        </div>
+</header>
+
+<div class="content">
+    <div class="wrap">
+        <div class="results">
+            <div class="col-1">
+                <div class="ad"><b>Ad</b> • www.thebest10websitebuilders.com/<img src="" /></div>
+                <h1>Website Builders (REcommended) | Build a Free Website</h1>
+                <p>Create A Stunning Site for Free. Easy to Use, Build a Website Online. Traffic generation tools. Easy drag n’ drop. SEO wizard. Easy-to-add blog. 100s of templates. Market leaders.</p>
+            </div>
+            <div class="col-2">
+                <a href=""><h2>Professional Website</h2></a>
+                <p>Build Your Own Website</p>
+                <p>It's Fast & Easy!</p>
+            </div>
+            <div class="col-2">
+                <a href=""><h2>Hire a Professional</h2></a>
+                <p>Save Time and Hire an Expert.</p>
+                <p>Get Your Project Done by an Agency.</p>
+            </div>
+        </div>
+        <div class="col-1">
+            <div class="ad"><b>Ad</b> • www.best10ecommercesitebuilders.com/<img src="" /></div>
+            <a href=""><h1>Webstie Builders (Recommended) | Winning Website Builder...</h1></a>
+            <p>It's Easy. Compare the Best Website Builders and Choose Yours. Build a Free Website Today.</p>
+            <p>It's Easy and Free. Compare the Best Website Builders. The #1 Website Builder's...</p>
+        </div>
+        <div class="col-1">
+            <div class="crumbs"><b>Ad</b> • www.best10ecommercesitebuilders.com/<img src="" /></div>
+            <a href=""><h1>Webstie Builders (Recommended) | Build a Free Website</h1></a>
+            <p>It's Easy. Compare the Best Website Builders and Choose Yours. Build a Free Website Today</p>
+        </div>
+        <div class="col-1">
+            <div class="crumbs"><b>Ad</b> • www.best10ecommercesitebuilders.com/<img src="" /></div>
+            <a href=""><h1>Webstie Builders (Recommended) | Winning Website Builder...</h1></a>
+            <p>It's Easy. Compare the Best Website Builders and Choose Yours. Build a Free Website Today.</p>
+            <p>It's Easy and Free. Compare the Best Website Builders. The #1 Website Builder's...</p>
+        </div>
+        <div class="col-1">
+            <div class="crumbs">victor-lf.github.io › google-search-results<img src="" /></div>
+            <a href=""><h1>build this webpage - GitHub Pages</h1></a>
+            <p>build this webpage. https://benjdelt.github.io/google-results/. With zero coding experience, artist building 180 webpages in 180 days ...</p>
+        </div>
+        <div class="col-1">
+            <div class="crumbs">christine-27.github.io › google-homepage<img src="" /></div>
+            <a href=""><h1>build this webpage - GitHub Pages</h1></a>
+            <p>With zero coding experience, artist building 180 webpages . ... days ago, having never done any programming in her life, Jennifer Dewalt built her first webpage.</p>
+        </div>
+        <div class="col-1">
+            <div class="crumbs">www.websitebuilderexpert.com › building-websites<img src="" /></div>
+            <a href=""><h1>How to Build a Website 2021 | A Step by Step Beginner's Guide</h1></a>
+            <p>Jun 1, 2021 — Anyone can build a website with the right tools - and the right guide! We'll show you how to make yours in just 9 steps.</p>
+        </div>
+        <div class="col-1">
+            <div class="crumbs">www.squarespace.com<img src="" /></div>
+            <a href=""><h1>Squarespace: Build a Website – Website Builder</h1></a>
+            <p>Squarespace is the all-in-one solution for anyone looking to create a beautiful website. Domains, eCommerce, hosting, galleries, analytics, and 24/7 support all  ...</p>
+        </div>
+        <div class="col-1">
+            <div class="crumbs">www.google.com › business › website-builder<img src="" /></div>
+            <a href=""><h1>Free Website Builder For Your Business - Google My Business</h1></a>
+            <p>Let Google build your first website for free. We'll help you create a beautiful website to impress and engage new customers – and establish your business online.</p>  
+        </div>
+        <div class="col-1">
+            <div class="crumbs">www.pcmag.com › ... › Web Hosting<img src="" /></div>
+            <a href=""><h1>How to Create a Website | PCMag</h1></a>
+            <p>You can use an online service to create web pages, or build it offline using a desktop software tool. Or, if you're a coding dynamo, use a plain text editor to create a ...</p>
+            
+        </div>
+        <div class="col-1">
+            <div class="crumbs">www.weebly.com<img src="" /></div>
+            <a href=""><h1>Free Website Builder: Build a Free Website or Online Store ...</h1></a>
+            <p>Weebly's free website builder makes it easy to create a website, blog, or online store. Find customizable templates, domains, and easy-to-use tools for any type ...</p>
+        </div>
+        <div class="col-1">
+            <div class="crumbs">www.wix.com<img src="" /></div>
+            <a href=""><h1>Wix.com: Free Website Builder | Create a Free Website</h1></a>
+            <p>Create a professional website with the Wix website builder. ... and Wix ADI ( Artificial Design Intelligence) will instantly build a personalized website just for you, ...</p>
+        </div>
+        <div class="col-1">
+            <div class="crumbs">www.webhostingsecretrevealed.net › WHSR Blog<img src="" /></div>
+            <a href=""><h1>How to Create a Website: Step-by-Step Tutorial</h1></a>
+            <p>Apr 29, 2021 — Today – we have innovative development tools and better web publishing platforms. There are three ways to make a website: Creating from ...</p>
+        </div>
+        <h2>Related Searches <img src=""/></h2>
+        <div class="col-1 related">
+            <p>Website making software</p>
+            <div class="col-6"><img src="" />WordPress</div>
+            <div class="col-6"><img src="" />Webfflow</div>
+            <div class="col-6"><img src="" />Google Web Designer</div>
+            <div class="col-6"><img src="" />Adobe Dreamweaver</div>
+            <div class="col-6"><img src="" />Visual Studio Code</div>
+            <div class="col-6"><img src="" />Adobe XD</div>
+            <div class="col-1"><button class="more"><img src="" />See more</button></div>
+        </div>
+        <div class="col-1 similar_search">
+            <ul>
+                <li><img src=""/>best website builder</li>
+            </ul>
+            <ul>
+                <li><img src=""/>how to make a website free on google</li>
+            </ul>
+            <ul>
+                <li><img src=""/>how to create a website free of cost</li>
+            </ul>
+            <ul>
+                <li><img src=""/>how to build a website from scratch</li>
+            </ul>
+            <ul>
+                <li><img src=""/>website builder software</li>
+            </ul>
+            <ul>
+                <li><img src=""/>google website</li>
+            </ul>
+            <ul>
+                <li><img src=""/>website builder free</li>
+            </ul>
+            <ul>
+                <li><img src=""/>creating a website for your business</li>
+            </ul>
+            <div class=""></div>
+        </div>
+    </div>
+</div>
+
+<footer>
+    <p>• <b>Indian Creek, Denver, CO - From your places (Home) - Use precise locatoin - Learn more</b></p>
+    <ul>
+        <li><a href="">Help</a></li>
+        <li><a href="">Send feedback</a></li>
+        <li><a href="">Privacy</a></li>
+        <li><a href="">Terms</a></li>
+    </ul>
+</footer>
 
 <body>
 
-<h1>Hello World</h1>h1>
+<h1>Hello World</h1>
 
 </body>
 </html>
