basic style updates, add images

--- a/google_Homepage/landing_page.html
+++ b/google_Homepage/landing_page.html
@@ -9,7 +9,7 @@
 
 <header>
         <div class="left">
-            <img src="" />
+            <img src="images/googlelogo_color_272x92dp.png" />
         </div>
         <div class="wrap">
             <div class="search bar">
@@ -18,31 +18,34 @@
                     X
                 </div>
                 <div class="search_btn">
-                    X
+                    <img src="images/search_black_24dp.svg" />
                 </div>
             </div>
-            <div class="right">
-                <img src="">
-                <img src="">
-            </div>
-            <ul class="left">
+        </div>
+
+        <div class="right">
+            <img src="images/apps_black_24dp.svg">
+            <img src="images/dwdlogo.jpg">
+        </div>
+        <div class="wrap">
+            <ul>
                 <li>
-                    <a href=""><img src="">All</a>
+                    <a href=""><img src="images/search_black_24dp.svg">All</a>
                 </li>
                 <li>
-                    <a href=""><img src="">News</a>
+                    <a href=""><img src="images/article_black_24dp.svg">News</a>
                 </li>
                 <li>
-                    <a href=""><img src="">Videos</a>
+                    <a href=""><img src="images/smart_display_black_24dp.svg">Videos</a>
                 </li>
                 <li>
-                    <a href=""><img src="">Maps</a>
+                    <a href=""><img src="images/location_on_black_24dp.svg">Maps</a>
                 </li>
                 <li>
-                    <a href=""><img src="">Shopping</a>
+                    <a href=""><img src="images/sell_black_24dp.svg">Shopping</a>
                 </li>
                 <li>
-                    <a href=""><img src="">More</a>
+                    <a href=""><img src="images/more_vert_black_24dp.svg">More</a>
                 </li>
             </ul>
             <ul class="right">
@@ -58,6 +61,7 @@
 
 <div class="content">
     <div class="wrap">
+        <p><span class="faded">About 157,000,000 results (0.67 seconds)</span></p>
         <div class="results">
             <div class="col-1">
                 <div class="ad"><b>Ad</b> • www.thebest10websitebuilders.com/<img src="" /></div>
