--- a/google_Homepage/landing_page.html
+++ b/google_Homepage/landing_page.html
@@ -8,55 +8,51 @@
 </head>
 
 <header>
-        <div class="left">
-            <img src="images/googlelogo_color_272x92dp.png" />
-        </div>
+        <img class="logo left" style="position:absolute" src="images/googlelogo_color_272x92dp.png" />
         <div class="wrap">
-            <div class="search bar">
-                <p>build this web page</p>
-                <div class="cancel_btn">
-                    X
+            <div class="col-1">
+                <div class="search_bar flex_center">
+                    <p>build this web page</p>
+                    <div class="right">
+                        <p>X</p>
+                        <img src="images/search_black_24dp.svg" />
+                    </div>
                 </div>
-                <div class="search_btn">
-                    <img src="images/search_black_24dp.svg" />
-                </div>
+            </div>
+            <div class="col-1">
+                <ul>
+                    <li>
+                        <a href=""><img src="images/search_black_24dp.svg">All</a>
+                    </li>
+                    <li>
+                        <a href=""><img src="images/article_black_24dp.svg">News</a>
+                    </li>
+                    <li>
+                        <a href=""><img src="images/smart_display_black_24dp.svg">Videos</a>
+                    </li>
+                    <li>
+                        <a href=""><img src="images/location_on_black_24dp.svg">Maps</a>
+                    </li>
+                    <li>
+                        <a href=""><img src="images/sell_black_24dp.svg">Shopping</a>
+                    </li>
+                    <li>
+                        <a href=""><img src="images/more_vert_black_24dp.svg">More</a>
+                    </li>
+                </ul>
+                <ul class="right">
+                    <li>
+                        <a href="">Settings</a>
+                    </li>
+                    <li>
+                        <a href="">Tools</a>
+                    </li>
+                </ul>
             </div>
         </div>
 
-        <div class="right">
-            <img src="images/apps_black_24dp.svg">
-            <img src="images/dwdlogo.jpg">
-        </div>
-        <div class="wrap">
-            <ul>
-                <li>
-                    <a href=""><img src="images/search_black_24dp.svg">All</a>
-                </li>
-                <li>
-                    <a href=""><img src="images/article_black_24dp.svg">News</a>
-                </li>
-                <li>
-                    <a href=""><img src="images/smart_display_black_24dp.svg">Videos</a>
-                </li>
-                <li>
-                    <a href=""><img src="images/location_on_black_24dp.svg">Maps</a>
-                </li>
-                <li>
-                    <a href=""><img src="images/sell_black_24dp.svg">Shopping</a>
-                </li>
-                <li>
-                    <a href=""><img src="images/more_vert_black_24dp.svg">More</a>
-                </li>
-            </ul>
-            <ul class="right">
-                <li>
-                    <a href="">Settings</a>
-                </li>
-                <li>
-                    <a href="">Tools</a>
-                </li>
-            </ul>
-        </div>
+        <img class="logo right" src="images/apps_black_24dp.svg">
+        <img class="logo right" src="images/dwdlogo.jpg">
 </header>
 
 <div class="content">
@@ -64,7 +60,7 @@
         <p><span class="faded">About 157,000,000 results (0.67 seconds)</span></p>
         <div class="results">
             <div class="col-1">
-                <div class="ad"><b>Ad</b> • www.thebest10websitebuilders.com/<img src="" /></div>
+                <div class="ad"><b>Ad</b> &#8226; www.thebest10websitebuilders.com/<img src="" /></div>
                 <h1>Website Builders (REcommended) | Build a Free Website</h1>
                 <p>Create A Stunning Site for Free. Easy to Use, Build a Website Online. Traffic generation tools. Easy drag n’ drop. SEO wizard. Easy-to-add blog. 100s of templates. Market leaders.</p>
             </div>
@@ -80,18 +76,17 @@
             </div>
         </div>
         <div class="col-1">
-            <div class="ad"><b>Ad</b> • www.best10ecommercesitebuilders.com/<img src="" /></div>
+            <div class="ad"><b>Ad</b>&#8226;www.best10ecommercesitebuilders.com/<img src="" /></div>
             <a href=""><h1>Webstie Builders (Recommended) | Winning Website Builder...</h1></a>
-            <p>It's Easy. Compare the Best Website Builders and Choose Yours. Build a Free Website Today.</p>
-            <p>It's Easy and Free. Compare the Best Website Builders. The #1 Website Builder's...</p>
+            <p>It's Easy. Compare the Best Website Builders and Choose Yours. Build a Free Website Today. It's Easy and Free. Compare the Best Website Builders. The #1 Website Builder's...</p>
         </div>
         <div class="col-1">
-            <div class="crumbs"><b>Ad</b> • www.best10ecommercesitebuilders.com/<img src="" /></div>
+            <div class="crumbs"><b>Ad</b>&#8226;www.best10ecommercesitebuilders.com/<img src="" /></div>
             <a href=""><h1>Webstie Builders (Recommended) | Build a Free Website</h1></a>
             <p>It's Easy. Compare the Best Website Builders and Choose Yours. Build a Free Website Today</p>
         </div>
         <div class="col-1">
-            <div class="crumbs"><b>Ad</b> • www.best10ecommercesitebuilders.com/<img src="" /></div>
+            <div class="crumbs"><b>Ad</b>&#8226;www.best10ecommercesitebuilders.com/<img src="" /></div>
             <a href=""><h1>Webstie Builders (Recommended) | Winning Website Builder...</h1></a>
             <p>It's Easy. Compare the Best Website Builders and Choose Yours. Build a Free Website Today.</p>
             <p>It's Easy and Free. Compare the Best Website Builders. The #1 Website Builder's...</p>
@@ -184,7 +179,7 @@
 </div>
 
 <footer>
-    <p>• <b>Indian Creek, Denver, CO - From your places (Home) - Use precise locatoin - Learn more</b></p>
+    <p>&#8226;<b>Indian Creek, Denver, CO - From your places (Home) - Use precise locatoin - Learn more</b></p>
     <ul>
         <li><a href="">Help</a></li>
         <li><a href="">Send feedback</a></li>
