--- a/google_Homepage/landing_page.html
+++ b/google_Homepage/landing_page.html
@@ -13,16 +13,16 @@
             <div class="col-1">
                 <div class="search_bar flex_center">
                     <p>build this web page</p>
-                    <div class="right">
+                    <div class="right flex_end">
                         <p>X</p>
                         <img src="images/search_black_24dp.svg" />
                     </div>
                 </div>
             </div>
-            <div class="col-1">
+            <div class="col-1" style="display:flex;">
                 <ul>
                     <li>
-                        <a href=""><img src="images/search_black_24dp.svg">All</a>
+                        <a href=""></a><img src="images/search_black_24dp.svg">All</a>
                     </li>
                     <li>
                         <a href=""><img src="images/article_black_24dp.svg">News</a>
@@ -40,7 +40,7 @@
                         <a href=""><img src="images/more_vert_black_24dp.svg">More</a>
                     </li>
                 </ul>
-                <ul class="right">
+                <ul class="right flex_end">
                     <li>
                         <a href="">Settings</a>
                     </li>
@@ -50,9 +50,10 @@
                 </ul>
             </div>
         </div>
-
-        <img class="logo right" src="images/apps_black_24dp.svg">
-        <img class="logo right" src="images/dwdlogo.jpg">
+        <div class="right flex_end" style="margin-right:2em;">
+            <img src="images/apps_black_24dp.svg">
+            <img style="width:25px;height:25px;" src="images/dwdlogo.jpg">
+        </div>  
 </header>
 
 <div class="content">
@@ -61,20 +62,29 @@
         <div class="results">
             <div class="col-1">
                 <div class="ad"><b>Ad</b> &#8226; www.thebest10websitebuilders.com/<img src="" /></div>
-                <h1>Website Builders (REcommended) | Build a Free Website</h1>
+                <a href=""><h1>Website Builders (Recommended) | Build a Free Website</h1></a>
                 <p>Create A Stunning Site for Free. Easy to Use, Build a Website Online. Traffic generation tools. Easy drag n’ drop. SEO wizard. Easy-to-add blog. 100s of templates. Market leaders.</p>
+                <div class="col-2">
+                    <a href=""><h2>Professional Website</h2></a>
+                    <p>Build Your Own Website</p>
+                    <p>It's Fast & Easy!</p>
+                </div>
+                <div class="col-2">
+                    <a href=""><h2>Hire a Professional</h2></a>
+                    <p>Save Time and Hire an Expert.</p>
+                    <p>Get Your Project Done by an Agency.</p>
+                </div>
+                <div class="col-2">
+                    <a href=""><h2>New Reviews Released</h2></a>
+                    <p>Compare Best Website Builders</p>
+                    <p>Top-notch Analysis from Our Experts</p>
+                </div>
+                <div class="col-2">
+                    <a href=""><h2>Feature Comparison</h2></a>
+                    <p>Tested and Reviewed by Experts</p>
+                    <p>Comapre the Best Website Builders</p>
+                </div>
             </div>
-            <div class="col-2">
-                <a href=""><h2>Professional Website</h2></a>
-                <p>Build Your Own Website</p>
-                <p>It's Fast & Easy!</p>
-            </div>
-            <div class="col-2">
-                <a href=""><h2>Hire a Professional</h2></a>
-                <p>Save Time and Hire an Expert.</p>
-                <p>Get Your Project Done by an Agency.</p>
-            </div>
-        </div>
         <div class="col-1">
             <div class="ad"><b>Ad</b>&#8226;www.best10ecommercesitebuilders.com/<img src="" /></div>
             <a href=""><h1>Webstie Builders (Recommended) | Winning Website Builder...</h1></a>
@@ -139,58 +149,58 @@
         </div>
         <h2>Related Searches <img src=""/></h2>
         <div class="col-1 related">
-            <p>Website making software</p>
-            <div class="col-6"><img src="" />WordPress</div>
-            <div class="col-6"><img src="" />Webfflow</div>
-            <div class="col-6"><img src="" />Google Web Designer</div>
-            <div class="col-6"><img src="" />Adobe Dreamweaver</div>
-            <div class="col-6"><img src="" />Visual Studio Code</div>
-            <div class="col-6"><img src="" />Adobe XD</div>
-            <div class="col-1"><button class="more"><img src="" />See more</button></div>
+            <div class="row"><p>Website making software</p></div>
+            <div class="col-6"><img src="images/wordpress_logo.jpg" /><p>WordPress</p></div>
+            <div class="col-6"><img src="images/webflow_logo.jpg" /><p>Webflow</p></div>
+            <div class="col-6"><img src="images/googleWebDesigner_logo.jpg" /><p>Google Web Designer</p></div>
+            <div class="col-6"><img src="images/dreamweaver_logo.jpg" /><p>Adobe Dreamweaver</p></div>
+            <div class="col-6"><img src="images/visualStudioCode_logo.jpg" /><p>Visual Studio Code</p></div>
+            <div class="col-6"><img src="images/xd_logo.jpg" /><p>Adobe XD</p></div>
+            <div class="col-1 flex_center"><button class="more flex_start"><img src="images/east_black_24dp.svg" /><p class="flex_center">See more</p></button></div>
+            <div class="row" style="display:flex;align-items:center;justify-content: center;">
+                <div class="line"></div><p style="display:inline-block;margin-left:4px;">Feedback</p>
+            </div>
         </div>
         <div class="col-1 similar_search">
-            <ul>
-                <li><img src=""/>best website builder</li>
-            </ul>
-            <ul>
-                <li><img src=""/>how to make a website free on google</li>
-            </ul>
-            <ul>
-                <li><img src=""/>how to create a website free of cost</li>
-            </ul>
-            <ul>
-                <li><img src=""/>how to build a website from scratch</li>
-            </ul>
-            <ul>
-                <li><img src=""/>website builder software</li>
-            </ul>
-            <ul>
-                <li><img src=""/>google website</li>
-            </ul>
-            <ul>
-                <li><img src=""/>website builder free</li>
-            </ul>
-            <ul>
-                <li><img src=""/>creating a website for your business</li>
-            </ul>
-            <div class=""></div>
+            <div class="col-2">
+                <div><img src="images/search_black_24dp.svg"/><p>best website builder</p></div>
+                </div>
+            <div class="col-2">
+                <div><img src="images/search_black_24dp.svg"/><p>how to make a website free on google</p></div>
+                </div>
+            <div class="col-2">
+                <div><img src="images/search_black_24dp.svg"/><p>how to create a website free of cost</p></div>
+                </div>
+            <div class="col-2">
+                <div><img src="images/search_black_24dp.svg"/><p>how to build a website from scratch</p></div>
+                </div>
+            <div class="col-2">
+                <div><img src="images/search_black_24dp.svg"/><p>website builder software</p></div>
+                </div>
+            <div class="col-2">
+                <div><img src="images/search_black_24dp.svg"/><p>google website</p></div>
+                </div>
+            <div class="col-2">
+                <div><img src="images/search_black_24dp.svg"/><p>website builder free</p></div>
+                </div>
+            <div class="col-2">
+                <div><img src="images/search_black_24dp.svg"/><p>creating a website for your business</p></div>
+            </div>
+            </div>
+            <div class="col-1 flex_center" style="justify-content: center;"><img src="images/googlePages.jpg" /></div>
         </div>
     </div>
 </div>
+</div>
 
 <footer>
-    <p>&#8226;<b>Indian Creek, Denver, CO - From your places (Home) - Use precise locatoin - Learn more</b></p>
-    <ul>
-        <li><a href="">Help</a></li>
-        <li><a href="">Send feedback</a></li>
-        <li><a href="">Privacy</a></li>
-        <li><a href="">Terms</a></li>
-    </ul>
+    <div class="wrap"><p><span class="dot"></span><b>Indian Creek, Denver, CO </b> - From your places (Home) - Use precise locatoin - Learn more</p>
+        <ul>
+            <li><a href="">Help</a></li>
+            <li><a href="">Send feedback</a></li>
+            <li><a href="">Privacy</a></li>
+            <li><a href="">Terms</a></li>
+        </ul>
+    </div>
 </footer>
-
-<body>
-
-<h1>Hello World</h1>
-
-</body>
 </html>
