javascript_basics Fundamentals Part 1

--- a/javascript_basics/index.html
+++ b/javascript_basics/index.html
@@ -1,5 +1,20 @@
 <!DOCTYPE html>
 <html>
-<h1>Hello World!</h1>
+
+<head>
+
+<title>Javascript Basics</title>
+<script type="text/javascript" src="js/javascript.js"></script>
+<meta charset="UTF-8"/>
+
+</head>
+
+<body>
+
+    <script>
+        console.log(a + b);
+    </script>
+
+</body>>
 
 </html>
