simple draw function

--- a/javascript_basics/index.html
+++ b/javascript_basics/index.html
@@ -15,6 +15,16 @@
         console.log(a + b);
     </script>
 
-</body>>
+    <h1>Javascript Basics</h1>
+    <p>Check out all this great stuff.</p>
+    <div id="drawing">
+        
+        <button>Draw</button>
+        <canvas></canvas>
+        
+    </div>
+
+    <script type="text/javascript" src="js/canvas.js"></script>
+</body>
 
 </html>
