Javascript Basics Task 2

--- a/javascript_basics/index.html
+++ b/javascript_basics/index.html
@@ -18,11 +18,12 @@
 <section class="preview"></section>
 
     <h1>Javascript Basics</h1>
-    <p>Check out all this great stuff.</p>
+    <h2>Check out all this great stuff.</h2>
+    <p></p>
         
         <button>Draw</button>
 
-        <canvas width="300" height="150"></canvas> 
+        <canvas width="600" height="500"></canvas> 
 
     <script type="text/javascript" src="js/randomName.js"></script>
 
