Javascript Basics Task 3

--- a/javascript_basics/index.html
+++ b/javascript_basics/index.html
@@ -18,12 +18,13 @@
 <section class="preview"></section>
 
     <h1>Javascript Basics</h1>
-    <h2>Check out all this great stuff.</h2>
-    <p></p>
+    <p>Check out all this great stuff.</p>
         
         <button>Draw</button>
 
         <canvas width="600" height="500"></canvas> 
+
+        <section></section>
 
     <script type="text/javascript" src="js/randomName.js"></script>
 
