javascript basics mdn tasks and odin project exercises

--- a/javascript_basics/index.html
+++ b/javascript_basics/index.html
@@ -4,6 +4,7 @@
 <head>
 
 <title>Javascript Basics</title>
+<link rel="stylesheet" href="css/style.css">
 <script type="text/javascript" src="js/javascript.js"></script>
 <meta charset="UTF-8"/>
 
@@ -15,16 +16,26 @@
         console.log(a + b);
     </script>
 
+<h1>Javascript Basics</h1>
+
 <section class="preview"></section>
 
-    <h1>Javascript Basics</h1>
-    <p>Check out all this great stuff.</p>
+<section>
+    <button>Erase</button>
+</section>
         
-        <button>Draw</button>
-
-        <canvas width="600" height="500"></canvas> 
-
-        <section></section>
+<section>
+    <canvas width="600" height="500"></canvas> 
+</section>
+        
+<section>
+    <h2>Odin Project tests</h2>
+    <p><b>Original Number: </b><span id="show_number"><script>showNumber(number);</script></span></p>
+    <p><b>Add 7: </b><span id="first_test"><script>add7(number);</script></span></p>
+    <p><b>Multiply by 2: </b><span id="second_test"></span><script>multiply(number, 2);</script></span></p>
+    <p><b>Capitalize first letter: </b><span id="third_test"><script>capitalize('first letter will always be uppercase');</script></span></p>
+    <p><b>Last letter: </b><span id="fourth_test"><script>lastLetter('Last practice test');</script></span></p>
+</section>
 
     <script type="text/javascript" src="js/randomName.js"></script>
 
