added links to odin projects

--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
 <h1>Hello World!</h1>
-<a href="google_Homepage">Check out my recreation of the Google Homepage.</a>
-<a href="javascript_basics/">Here are several projects covering Javascript Basics</a>
-<a href="rock_paper_scissors">Play a Rock Paper Scissors game.</a>
+<section>
+    <ul>
+        <li><a href="google_Homepage">Check out my recreation of the Google Homepage.</a></li>
+        <li><a href="javascript_basics/">Here are several projects covering Javascript Basics</a></li>
+        <li><a href="rock_paper_scissors">Play a Rock Paper Scissors game.</a></li>
+    </ul>
+</section>
+
 </html>
