--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <link rel="stylesheet" href="css/style.css">
+        <script src="index.js"></script>
+        <script src="js/javascript.js"></script>
+    </head>
 <h1>Hello World!</h1>
 <section>
-    <ul>
-        <li><a href="google_Homepage">Check out my recreation of the Google Homepage.</a></li>
-        <li><a href="javascript_basics/">Here are several projects covering Javascript Basics</a></li>
-        <li><a href="rock_paper_scissors">Play a Rock Paper Scissors game.</a></li>
-    </ul>
+    <div class="content">
+        <ul>
+            <li><a href="google_Homepage/index.html">Check out my recreation of the Google Homepage.</a></li>
+            <li><a href="javascript_basics/index.html">Here are several projects covering Javascript Basics</a></li>
+            <li><a href="rock_paper_scissors/index.html">Play a Rock Paper Scissors game.</a></li>
+        </ul>
+    </div>
 </section>
 
 </html>
