switched branch and commit

--- a/loops/index.html
+++ b/loops/index.html
@@ -3,31 +3,21 @@
   <head>
     <meta charset="utf-8"/>
     <script src="index.js"></script>
-    <title>Loops: Task 1</title>
-    <style>
-      p {
-        color: purple;
-        margin: 0.5em 0;
-      }
-
-      * {
-        box-sizing: border-box;
-      }
-    </style>
-    <link rel="stylesheet" href="../styles.css" />
+    <link rel="stylesheet" href="style.css">
+    <title>Loops</title>
   </head>
 
   <body>
+    <h1>Active Learning</h1>
+        <section id="active_learning">
+            <div class="output">
+                <p></p>
+        </div>
+        </section>
+    <h1>Loops 1</h1>
+        <section class="preview">
 
-    <section class="preview">
-
-
-
-    </section>
+        </section>
 
   </body>
-  <script>
-    
-  </script>
-
 </html>
