Loops 1 with commas and period

--- a/loops/index.html
+++ b/loops/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8"/>
-    <script src="index.js"></script>
+    
     <link rel="stylesheet" href="style.css">
     <title>Loops</title>
   </head>
@@ -16,8 +16,10 @@
         </section>
     <h1>Loops 1</h1>
         <section class="preview">
+            <div class="loops1" ></div>
 
         </section>
-
+        
+        <script src="index.js"></script>
   </body>
 </html>
