--- a/loops/index.html
+++ b/loops/index.html
@@ -9,16 +9,28 @@
 
   <body>
     <h1>Active Learning</h1>
-        <section id="active_learning">
-            <div class="output">
-                <p></p>
-        </div>
-        </section>
+    <section id="active_learning">
+        <div class="output">
+            <p></p>
+    </div>
+    </section>
     <h1>Loops 1</h1>
         <section class="preview">
             <div class="loops1" ></div>
 
         </section>
+
+    <h1>Loops 2</h1>
+    <section class="preview">
+        <div class="loops2" ></div>
+
+    </section>
+
+    <h1>Loops 3</h1>
+    <section class="preview">
+        <div class="loops3" ></div>
+
+    </section>
         
         <script src="index.js"></script>
   </body>
